# GhostOS

./: .gitignore  pyproject.toml  setup_codex_agent.sh
ghostos/demo/configs/: llms_conf.yml
