[project]
name = "ghostos"
version = "0.0.1"
description = "An agent framework offering agents and meta-agents a Python code interface to operate everything."
readme = "README.md"
authors = [
    { name = "zhuming", email = "thirdgerb@gmail.com" },
    { name = "Nile Zhou", email = "nilezhou123@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"

dependencies = [
    "pydantic>=2.7.0,<3.0.0",
    "pytest>=8.1.1,<9.0.0",
    "openai>=1.19.0,<2.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "rich>=13.7.1,<14.0.0",
    "httpx-socks>=0.9.1,<1.0.0",
    "restrictedpython>=7.1,<8.0",
    "datasets>=2.20.0,<3.0.0",
    "anthropic>=0.31.2,<0.32.0",
    "sympy>=1.13.1,<2.0.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.2,<2.0.0",
    "networkx>=3.3,<4.0.0",
    "grep-ast>=0.3.3,<0.4.0",
    "litellm>=1.43.18,<1.44.0",
    "hide-py>=0.3.0,<0.4.0",
    "prompt-toolkit>=3.0.47,<4.0.0",
    "arxiv>=2.1.3,<3.0.0",
    "llama-index-core>=0.11.9,<0.12.0",
    "llama-index-llms-openai>=0.2.7,<0.3.0"
]

[project.urls]
repository = "https://github.com/ghost-in-moss/GhostOS.git"

[project.scripts]
init = "ghostos.scripts.init:main"
demo = "ghostos.demo.scripts.demo:main"
llm_test = "ghostos.demo.scripts.llm_test:main"
clear_runtime = "ghostos.demo.scripts.clear_runtime:main"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.1",
]
test = [
    "pytest<9.0.0,>=8.3.3",
    "pytest-mock<4.0.0,>=3.12.0",
]

[tool.pdm.build]
includes = [
    "ghostos",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pyright]
reportCallIssue="none"
